--- a/UARTRxInterrupt.ioc
+++ b/UARTRxInterrupt.ioc
@@ -5,7 +5,7 @@ CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -17,15 +17,18 @@ Mcu.IP2=MEMORYMAP
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC1
-Mcu.Pin1=PA13 (JTMS/SWDIO)
-Mcu.Pin2=PA14 (JTCK/SWCLK)
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=5
+Mcu.Pin1=PB14
+Mcu.Pin2=PB15
+Mcu.Pin3=PA13 (JTMS/SWDIO)
+Mcu.Pin4=PA14 (JTCK/SWCLK)
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.Pin6=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -41,11 +44,16 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PB14.Mode=Asynchronous
+PB14.Signal=USART1_TX
+PB15.Mode=Asynchronous
+PB15.Signal=USART1_RX
 PC1.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
 PC1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PC1.GPIO_PuPd=GPIO_NOPULL
@@ -71,6 +79,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
+ProjectManager.MultiThreaded=true
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
@@ -80,6 +89,7 @@ ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
+ProjectManager.ThreadSafeStrategy=Cortex-M7NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
@@ -89,7 +99,7 @@ RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
 RCC.APB1Freq_Value=64000000
-RCC.APB2Freq_Value=64000000
+RCC.APB2Freq_Value=32000000
 RCC.APB3Freq_Value=64000000
 RCC.APB4Freq_Value=64000000
 RCC.AXIClockFreq_Value=64000000
@@ -98,8 +108,9 @@ RCC.CKPERFreq_Value=64000000
 RCC.CortexFreq_Value=64000000
 RCC.CpuClockFreq_Value=64000000
 RCC.D1CPREFreq_Value=64000000
+RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.DFSDMACLkFreq_Value=129000000
-RCC.DFSDMFreq_Value=64000000
+RCC.DFSDMFreq_Value=32000000
 RCC.DIVP1Freq_Value=129000000
 RCC.DIVP2Freq_Value=129000000
 RCC.DIVP3Freq_Value=129000000
@@ -117,7 +128,7 @@ RCC.HCLKFreq_Value=64000000
 RCC.HRTIMFreq_Value=64000000
 RCC.I2C123Freq_Value=64000000
 RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=64000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIM345Freq_Value=64000000
@@ -135,14 +146,14 @@ RCC.SAI4BFreq_Value=129000000
 RCC.SDMMCFreq_Value=129000000
 RCC.SPDIFRXFreq_Value=129000000
 RCC.SPI123Freq_Value=129000000
-RCC.SPI45Freq_Value=64000000
+RCC.SPI45Freq_Value=32000000
 RCC.SPI6Freq_Value=64000000
 RCC.SWPMI1Freq_Value=64000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.Tim1OutputFreq_Value=64000000
 RCC.Tim2OutputFreq_Value=64000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=64000000
+RCC.USART16Freq_Value=32000000
 RCC.USART234578Freq_Value=64000000
 RCC.USBFreq_Value=129000000
 RCC.VCO1OutputFreq_Value=258000000
@@ -151,6 +162,8 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=2000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
